--- a/crm/src/app/globals.css
+++ b/crm/src/app/globals.css
@@ -1,6 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+body{
+  background: #fafafa;
+}
+/*cd /c/Users/Lesya/WebstormProjects/next-app/crm*/
