add dynamic elements

--- a/crm/src/app/globals.css
+++ b/crm/src/app/globals.css
@@ -11,3 +11,7 @@ body{
   background: #fafafa;
 }
 /*cd /c/Users/Lesya/WebstormProjects/next-app/crm*/
+/*taskkill //PID 23524 //F*/
+/*taskkill //PID 22352 //F*/
+
+
